[BUGFIX] Improve visibility of hidden inline/file references
Previously, the entire row—including controls was rendered with
opacity 0.3 when a reference was hidden. This caused confusion for
editors, as it appeared that controls were disabled even when they were
not.

This change limits the opacity effect on the panel header content only,
ensuring that controls remain fully visible and clearly usable unless
explicitly disabled.

Resolves: #106744
Releases: main, 13.4
Reviewed-on: https://review.typo3.org/c/Packages/TYPO3.CMS/+/89595
Tested-by: core-ci <typo3@b13.com>
Tested-by: Oli Bartsch <bo@cedev.de>

--- a/typo3/sysext/backend/Resources/Public/Css/backend.css
+++ b/typo3/sysext/backend/Resources/Public/Css/backend.css
@@ -3643,7 +3643,7 @@ img.t3-tceforms-sysfile-imagepreview{float:var(--typo3-position-start);-webkit-m
 div.t3-form-field-container:first-child .t3-form-field-label-flex{border-top:0}
 .form-irre-object,.t3-flex-section{opacity:1;transition:opacity .5s}
 .form-irre-object--deleted,.t3-flex-section--deleted{opacity:0!important}
-.t3-form-field-container-inline-hidden,.t3-form-field-container-inline-placeHolder{opacity:.3}
+.t3-form-field-container-inline-hidden .form-file-header-button,.t3-form-field-container-inline-hidden .form-irre-header-button,.t3-form-field-container-inline-placeHolder .form-file-header-button,.t3-form-field-container-inline-placeHolder .form-irre-header-button{opacity:.3}
 .t3-form-field-disable{display:none}
 .formengine-field-item.disabled .t3-form-field-disable{background:var(--typo3-form-section-bg);display:block;height:100%;left:0;opacity:.5;position:absolute;top:0;width:100%;z-index:10}
 .formengine-field-item.disabled .form-description,.formengine-field-item.disabled .t3-form-field-eval-null-checkbox{position:relative;z-index:20}
